--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -3,16 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+
     <!-- bootstrap's meta tags -->
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <!-- Disable caching to use updated CSS file -->
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
 
     <title>Mission to Mars</title>
 
@@ -20,10 +15,10 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
 
     <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static', filename='css/Cover Template for Bootstrap_files/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
 
     <!-- Custom styles for this bootstrap template -->
-    <link href="{{url_for('static', filename='css/Cover Template for Bootstrap_files/cover.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/cover.css')}}" rel="stylesheet">
     <link href="chrome-extension://idpbkophnbfijcnlffdmmppgnncgappc/css/content.css" rel="stylesheet" type="text/css">
 
     <!-- Google fonts -->
@@ -45,12 +40,12 @@
         <main role="main" class="inner cover">
             <h1 class="cover-heading text-light header-font">Mission to Mars</h1>
             <p class="lead text-light">All the data you never knew you needed about the red planet.</p>
-            <p class="lead text-light"><a class="btn btn-danger btn-md" href="/scrape" role="button">Start scraping!</a></p>
+            <p class="lead text-light"><a class="btn bg-mars-red btn-md" href="/scrape" role="button">Start scraping!</a></p>
         </main>
 
         <footer class="mastfoot mt-auto">
             <div class="inner">
-                <p>A Web Scraping Project by Neha Nayeem &#169; 2020</p>
+                <p>A <a class="foot-a" href="https://github.com/neha-nayeem/web-scraping-challenge">Web Scraping Project</a> by Neha Nayeem &#169; 2020</p>
             </div>
         </footer>
     </div>
@@ -59,12 +54,12 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/css/Cover Template for Bootstrap_files/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="/static/css/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>
-        window.jQuery || document.write('<script src="/static/css/assets/js/vendor/jquery-slim.min.js"><\/script>')
+        window.jQuery || document.write('<script src="static/css/assets/js/vendor/jquery-slim.min.js> <\/script>')
     </script>
-    <script src="/static/css/Cover Template for Bootstrap_files/popper.min.js"></script>
-    <script src="/static/css/Cover Template for Bootstrap_files/bootstrap.min.js"></script>
+    <script src="/static/css/popper.min.js"></script>
+    <script src="/static/css/bootstrap.min.js"></script>
 
 </body>
 
