--- a/Mission_to_Mars/templates/data.html
+++ b/Mission_to_Mars/templates/data.html
@@ -40,7 +40,7 @@
                 <h3 class="mini-header-font mb-3">Featured Space Image</h4>
                     <p class=" font-weight-light ">{{ info.featuredimage_title }}</p>
                     <img class="img-fluid " src={{info.featuredimage_url}} alt="Card image cap ">
-                    <caption><small>Source: <a target="blank_ " href="https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars ">jpl.nasa.gov</a></small></caption>
+                    <caption><small>Source: <a class="link" target="blank_ " href="https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars ">jpl.nasa.gov</a></small></caption>
             </div>
 
             <div class="col-sm-12 col-md-5 pt-2 ">
@@ -50,7 +50,7 @@
                     </div>
                     <div class=" card-body ">
                         <p class="font-weight-light ">{{ info.latest_tweet }}</p>
-                        <caption><small>Source: <a target="blank_ " href="https://twitter.com/marswxreport ">@marswxreport</a></small></caption>
+                        <caption><small>Source: <a class="link" target="blank_ " href="https://twitter.com/marswxreport ">@marswxreport</a></small></caption>
                     </div>
                 </div>
                 <br>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="card-body table-responsive ">
                         {{info.mars_fact_table|safe}}
-                        <caption><small>Source: <a href="https://space-facts.com/mars/ ">Space Facts</a></small></caption>
+                        <caption><small>Source: <a class="link" href="https://space-facts.com/mars/ ">Space Facts</a></small></caption>
 
                     </div>
                 </div>
