HTML page styling

--- a/Mission_to_Mars/templates/data.html
+++ b/Mission_to_Mars/templates/data.html
@@ -23,7 +23,7 @@
 <body class="bg-dark">
     <div class="container-fluid p-0">
         <div class="jumbotron jumbotron-fluid m-0 text-center bg-mars-red">
-            <h1 class="text-light header-font">Mission to Mars</h1>
+            <h1 class="text-light header-font mb-3">Mission to Mars</h1>
             <p><a class="btn btn-light btn-md" href="/scrape" role="button">Scrape New Data</a></p>
         </div>
 
