--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -15,17 +15,17 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
 
     <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this bootstrap template -->
-    <link href="{{url_for('static', filename='css/cover.css')}}" rel="stylesheet">
+    <link href="../static/css/cover.css" rel="stylesheet">
     <link href="chrome-extension://idpbkophnbfijcnlffdmmppgnncgappc/css/content.css" rel="stylesheet" type="text/css">
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500;700&family=Roboto&display=swap" rel="stylesheet">
 
     <!-- Custom stylesheet for web scraper -->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
+    <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 </head>
 
 
