--- a/Mission_to_Mars/templates/data.html
+++ b/Mission_to_Mars/templates/data.html
@@ -16,7 +16,7 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500;700&family=Roboto&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
+    <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
 
 </head>
 
