--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:wght@500;700&family=Roboto&display=swap" rel="stylesheet">
 
     <!-- Custom stylesheet for web scraper -->
-    <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 </head>
 
 
@@ -54,12 +54,12 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./static/css/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="/static/css/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>
-        window.jQuery || document.write('<script src="./static/css/assets/js/vendor/jquery-slim.min.js> <\/script>')
+        window.jQuery || document.write('<script src="static/css/assets/js/vendor/jquery-slim.min.js> <\/script>')
     </script>
-    <script src="./static/css/popper.min.js"></script>
-    <script src="./static/css/bootstrap.min.js"></script>
+    <script src="/static/css/popper.min.js"></script>
+    <script src="/static/css/bootstrap.min.js"></script>
 
 </body>
 
